--- a/content.html
+++ b/content.html
@@ -33,21 +33,20 @@
         margin-bottom: 5px;
       }
 
-      code {
-        font-family: monospace;
-        color: #ffffff;
-      }
-
-      pre {
+    pre, code {
+        background-color: #11111b;
+        color: #f8f8f2;
+        font-family: "JetBrains Mono", monospace;
+        font-size: 14px;
+        padding: 8px;
+        border-radius: 8px;
         overflow-x: auto;
-        white-space: pre;
-        padding: 10px;
-        background-color: #07070d;
-        border-radius: 5px;
-      }
+        display: block;
+    }
 
       p {
         margin-top: 0;
+        text-align: justify;
       }
 
       nav {
