--- a/index.html
+++ b/index.html
@@ -71,10 +71,15 @@
       <a href="#">About</a>
     </nav>
     <hr>
+    <h1>Posts</h1>
+
     <div class="links">
         <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application</a>
       </p>
       <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md">Lateral Movement — Double Pivoting with Ligolo-ng</a>
+      </p>
+      <p>2025-03-16 >> <a href="/content.html?p=md/
+Extract-file-from-DS_Store.md">Extract file from .DS_Store</a>
       </p>
     </div>
     <div class="footer">© 2025 0xc4t Notes</div>
