--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         background-color: #1e1e2e;
         color: #cdd6f4;
         font-family: "JetBrains Mono", monospace;
+        font-optical-sizing: auto;
         max-width: 800px;
         margin: 40px auto;
         padding: 20px;
@@ -60,10 +61,14 @@
         margin-top: 40px;
         color: #cdd6f4;
       }
+
+      .slogan {
+        text-align: justify;
+      }
     </style>
   </head>
     <h1>0xc4t Notes</h1>
-    <p>
+    <p class="slogan">
       <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
@@ -74,11 +79,12 @@
     <h1>Posts</h1>
 
     <div class="links">
-        <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md">Extract file from .DS_Store</a>
-      </p>
         <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application</a>
       </p>
       <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md">Lateral Movement — Double Pivoting with Ligolo-ng</a>
+      </p>
+      <p>2025-03-16 >> <a href="/content.html?p=md/
+Extract-file-from-DS_Store.md">Extract file from .DS_Store</a>
       </p>
     </div>
     <div class="footer">© 2025 0xc4t Notes</div>
