--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       body {
         background-color: #1e1e2e;
         color: #cdd6f4;
+        font-size: 13px;
         font-family: "JetBrains Mono", monospace;
         font-optical-sizing: auto;
         max-width: 800px;
@@ -87,7 +88,7 @@
 Extract-file-from-DS_Store.md">Extract file from .DS_Store</a>
       </p>
     </div>
-  <hr>
+    <hr>
     <div class="footer">© 2025 0xc4t Notes</div>
   </body>
 </html>
