--- a/content.html
+++ b/content.html
@@ -92,6 +92,11 @@
      .slogan {
         text-align: justify;
       }
+            @media (min-width: 1024px) {
+        body {
+        font-size: 18px;
+    }
+    }
     </style>
   </head>
   <body>
