--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
       .slogan {
         text-align: justify;
       }
+            @media (min-width: 1024px) {
+        body {
+        font-size: 18px;
+    }
+    }
     </style>
   </head>
     <h1>0xc4t Notes</h1>
