--- a/index.html
+++ b/index.html
@@ -82,16 +82,14 @@
       <a href="#">About</a>
     </nav>
     <hr>
-    <h1>Posts</h1>
+    <h1>Articles</h1>
 
     <div class="links">
-        <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application</a>
-      </p>
-      <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md">Lateral Movement — Double Pivoting with Ligolo-ng</a>
-      </p>
-      <p>2025-03-16 >> <a href="/content.html?p=md/
-Extract-file-from-DS_Store.md">Extract file from .DS_Store</a>
-      </p>
+
+        <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1</a></p>
+        <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application</a></p>
+        <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md">Lateral Movement — Double Pivoting with Ligolo-ng</a></p>
+        <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md">Extract file from .DS_Store</a></p>
     </div>
     <hr>
     <div class="footer">© 2025 0xc4t Notes</div>
