--- a/index.html
+++ b/index.html
@@ -5,93 +5,280 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>0xc4t Notes</title>
     <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/1932747779954388993/koP5KTZ5_400x400.jpg">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/markdown-it/12.3.2/markdown-it.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap');
 
+
+         :root {
+        --bg-color: #1e1e2e;
+        --text-color: #cdd6f4;
+        --link-color: #89b4fa;
+        --link-hover: #f38ba8;
+        --nav-color: #cba6f7;
+        --accent-color: #89b4fa;
+        --border-color: #45475a;
+        --footer-color: #a6adc8;
+        --code-bg: #11111b;
+        --code-color: #f8f8f2;
+      }
+
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+
       body {
-        background-color: #1e1e2e;
-        color: #cdd6f4;
-        font-size: 13px;
+        background-color: var(--bg-color);
+        color: var(--text-color);
         font-family: "JetBrains Mono", monospace;
-        font-optical-sizing: auto;
         max-width: 800px;
         margin: 40px auto;
         padding: 20px;
+        font-size: 14px;
+        line-height: 1.6;
       }
 
       a {
-        color: #89b4fa;
-        text-decoration: underline;
+        color: var(--link-color);
+        transition: color 0.2s ease;
       }
 
       a:hover {
         text-decoration: underline;
-        color: #cba6f7;
+        color: var(--link-hover);
       }
 
       h1 {
-        font-size: 25px;
+        font-size: 1.8rem;
         margin-bottom: 5px;
+        color: var(--accent-color);
+      }
+
+      h2, h3 {
+        color: var(--nav-color);
+        margin: 1.5rem 0 1rem;
+      }
+
+      h2 {
+        font-size: 1.5rem;
+      }
+
+      h3 {
+        font-size: 1.3rem;
+      }
+
+      pre, code {
+        background-color: var(--code-bg);
+        color: var(--code-color);
+        font-family: "JetBrains Mono", monospace;
+        font-size: 0.9rem;
+        padding: 12px;
+        border-radius: 8px;
+        overflow-x: auto;
+        display: block;
+        line-height: 1.4;
+      }
+
+      code:not(pre code) {
+        display: inline;
+        padding: 2px 6px;
       }
 
       p {
-        margin-top: 0;
+        text-align: justify;
+        hyphens: auto;
+        margin-bottom: 1rem;
+      }
+
+      nav {
+        margin-top: 10px;
       }
 
       nav a {
         margin-right: 15px;
         font-weight: bold;
-        color: #cba6f7;
-        text-decoration: none;
+        color: var(--nav-color);
       }
 
       hr {
         border: none;
-        border-top: 1px solid #45475a;
+        border-top: 1px solid var(--border-color);
         margin: 20px 0;
       }
 
       .content {
         margin-top: 20px;
-        text-align: justify;
       }
 
       .footer {
-        font-size: 12px;
-        margin-top: 40px;
-        color: #cdd6f4;
+        font-size: 0.85rem;
+        margin-top: 10px;
+        color: var(--footer-color);
+        text-align: center;
+      }
+
+      img {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 1rem auto;
+        border-radius: 4px;
       }
 
       .slogan {
         text-align: justify;
+        font-style: italic;
       }
-            @media (min-width: 1024px) {
-        body {
-        font-size: 18px;
-    }
-    }
+
+      .social-icons {
+        margin: 20px 0 10px;
+        text-align: center;
+      }
+
+      .social-icons a {
+        margin: 0 12px;
+        color: var(--nav-color);
+        font-size: 1.4rem;
+        transition: all 0.2s ease;
+      }
+
+      .social-icons a:hover {
+        color: var(--link-hover);
+        transform: scale(1.2);
+      }
+
+      #content blockquote {
+        border-left: 4px solid var(--nav-color);
+        padding-left: 1rem;
+        margin-left: 0;
+        color: var(--footer-color);
+      }
+
+      #content table {
+        width: 100%;
+        border-collapse: collapse;
+        margin: 1rem 0;
+      }
+
+      #content th, #content td {
+        border: 1px solid var(--border-color);
+        padding: 8px 12px;
+        text-align: left;
+      }
+
+      #content th {
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+
+      #content ul, #content ol {
+        margin: 1rem 0;
+        padding-left: 2rem;
+      }
+
+      @media (max-width: 768px) {
+     body {
+          margin: 15px auto;
+          padding: 10px;
+          font-size: 13px;
+        }
+
+        h1 {
+          font-size: 1.6rem;
+        }
+
+        h2 {
+          font-size: 1.3rem;
+        }
+
+        h3 {
+          font-size: 1.1rem;
+        }
+
+        nav a {
+          margin-right: 10px;
+          display: inline-block;
+          margin-bottom: 5px;
+        }
+
+        pre, code {
+          font-size: 0.8rem;
+          padding: 10px;
+        }
+
+        .social-icons a {
+          margin: 0 8px;
+          font-size: 1.3rem;
+        }
+      }
+
+     @media (max-width: 480px) {
+       body {
+          margin: 15px auto;
+          padding: 10px;
+          font-size: 13px;
+        }
+
+        h1 {
+          font-size: 1.4rem;
+        }
+
+        h2 {
+          font-size: 1.2rem;
+        }
+
+        h3 {
+          font-size: 1rem;
+        }
+
+        nav a {
+          margin-right: 8px;
+          font-size: 0.9rem;
+        }
+
+        .links p {
+          margin: 14px 0;
+          padding: 10px 0;
+          line-height: 1.5;
+        }
+
+        .social-icons a {
+          margin: 0 6px;
+          font-size: 1.2rem;
+        }
+
+        .links {
+          margin-top: 20px;
+        }
+      }
     </style>
   </head>
+  <body>
     <h1>0xc4t Notes</h1>
     <p class="slogan">
       <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
       <a href="index.html">Posts</a>
-      <a href="#">About</a>
+      <a href="about.html">About</a>
     </nav>
     <hr>
-    <h1>Articles</h1>
 
+    <h1>Posts</h1>
     <div class="links">
-
-        <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1</a></p>
-        <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application</a></p>
-        <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md">Lateral Movement — Double Pivoting with Ligolo-ng</a></p>
-        <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md">Extract file from .DS_Store</a></p>
+      <p>2025-06-17 <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application</a></p>
+      <p>2025-03-16 <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md"> Lateral Movement — Double Pivoting with Ligolo-ng</a></p>
+      <p>2025-03-16 <a href="/content.html?p=md/Extract-file-from-DS_Store.md"> Extract file from .DS_Store</a></p>
+      <p>2025-09-03 <a href="/content.html?p=md/tes.md"> New Post</a></p>
     </div>
+
     <hr>
+    <div class="social-icons">
+      <a href="https://www.instagram.com/0xc4t" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://x.com/iamvarel" target="_blank"><i class="fab fa-x-twitter"></i></a>
+    </div>
     <div class="footer">© 2025 0xc4t Notes</div>
   </body>
 </html>
