--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
         .links p {
           margin: 5px 0; /* lebih rapat lagi */
-          font-size: 14px;
+          font-size: 12px;
         }
         
         .social-icons a {
@@ -253,6 +253,8 @@
       <a href="about.html">About</a>
     </nav>
     <hr>
+
+    <h1>Articles</h1>
     <div class="links">
       <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application </a></p>
       <b1>
