--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
       <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/eCPPTv3-Certification-Review-Dont-Take-It.md">eCPPTv3 Certification Review | Don’t Take It?</a></p>
+      <p>2025-09-04 >> <a href="/content.html?p=md/How-I-Can-Get-P1-Nasa-easily-Dorking.md">How I Can Get P1 Nasa easily — Dorking</a></p>
 
 
     </div>
