--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
     <div class="links">
       <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application </a></p>
       <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md"> Lateral Movement Double Pivoting with Ligolo-ng </a></p>
-      <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md"> Extract file from .DS_Store </a></p>
-      <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1</a></p>
-      <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng</a></p>
+      <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md"> Extract file from .DS_Store Information Disclosure </a></p>
+      <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
+      <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/eCPPTv3-Certification-Review-Dont-Take-It.md">eCPPTv3 Certification Review | Don’t Take It?</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/How-I-Can-Get-P1-Nasa-easily-Dorking.md">How I Can Get P1 Nasa easily — Dorking</a></p>
 
