--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
       }
 
       .links p {
-        margin: 8px 0;  /* lebih rapat */
-        line-height: 1.4;
+        text-align: left;
       }
 
       #content blockquote {
@@ -205,8 +204,7 @@
         }
 
         .links p {
-          margin: 6px 0; /* rapat di layar kecil */
-          font-size: 13px;
+          text-align: left;
         }
 
         .social-icons a {
@@ -232,8 +230,7 @@
         }
 
         .links p {
-          margin: 5px 0; /* lebih rapat lagi */
-          font-size: 12px;
+          text-align: left;
         }
 
         .social-icons a {
@@ -263,8 +260,6 @@
       <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/eCPPTv3-Certification-Review-Dont-Take-It.md">eCPPTv3 Certification Review | Don’t Take It?</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/How-I-Can-Get-P1-Nasa-easily-Dorking.md">How I Can Get P1 Nasa easily — Dorking</a></p>
-
-
     </div>
 
     <hr>
