--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       :root {
         --bg-color: #1e1e2e;
         --text-color: #cdd6f4;
-        --link-color: #89b4fa;
+        --link-color: #cba6f7;
         --link-hover: #f38ba8;
         --nav-color: #cba6f7;
-        --accent-color: #89b4fa;
+        --accent-color: #cba6f7;
         --border-color: #45475a;
         --footer-color: #a6adc8;
         --code-bg: #11111b;
@@ -241,7 +241,7 @@
     </style>
   </head>
   <body>
-    <h1><a href="index.html">0xc4t Notes</a></h1>
+    <h1>0xc4t Notes</h1>
     <p class="slogan">
       <i>Web Security & Active Directory Security</i>
     </p>
@@ -253,13 +253,13 @@
 
     <h1>Articles</h1>
     <div class="links">
-      <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application </a></p>
-      <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md"> Lateral Movement Double Pivoting with Ligolo-ng </a></p>
-      <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md"> Extract file from .DS_Store Information Disclosure </a></p>
       <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/eCPPTv3-Certification-Review-Dont-Take-It.md">eCPPTv3 Certification Review | Don’t Take It?</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/How-I-Can-Get-P1-Nasa-easily-Dorking.md">How I Can Get P1 Nasa easily — Dorking</a></p>
+      <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application </a></p>
+      <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md"> Lateral Movement Double Pivoting with Ligolo-ng </a></p>
+      <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md"> Extract file from .DS_Store Information Disclosure </a></p>
     </div>
 
     <hr>
