--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <body>
     <h1>0xc4t Notes</h1>
     <p class="slogan">
-      <i>Web Security & Active Directory Security</i>
+      <p>Web Security & Active Directory Security</p>
     </p>
     <nav>
       <a href="index.html">Posts</a>
@@ -253,13 +253,13 @@
 
     <h1>Articles</h1>
     <div class="links">
-      <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application </a></p>
-      <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md"> Lateral Movement Double Pivoting with Ligolo-ng </a></p>
-      <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md"> Extract file from .DS_Store Information Disclosure </a></p>
       <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/eCPPTv3-Certification-Review-Dont-Take-It.md">eCPPTv3 Certification Review | Don’t Take It?</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/How-I-Can-Get-P1-Nasa-easily-Dorking.md">How I Can Get P1 Nasa easily — Dorking</a></p>
+      <p>2025-06-17 >> <a href="/content.html?p=md/Backup-Vulnerabilities-Android-Mobile-Application.md"> Backup Vulnerabilities Android Mobile Application </a></p>
+      <p>2025-03-16 >> <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md"> Lateral Movement Double Pivoting with Ligolo-ng </a></p>
+      <p>2025-03-16 >> <a href="/content.html?p=md/Extract-file-from-DS_Store.md"> Extract file from .DS_Store Information Disclosure </a></p>
     </div>
 
     <hr>
