--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       a {
         color: var(--link-color);
         transition: color 0.2s ease;
+        text-decoration:  none;
       }
 
       a:hover {
