--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
       a {
         color: var(--link-color);
         transition: color 0.2s ease;
-        text-decoration:  none;
       }
 
       a:hover {
@@ -254,6 +253,7 @@
 
     <h1>Articles</h1>
     <div class="links">
+      <p>2025-09-08 >> <a href="/content.html?p=md/The-Useless-Tradition-of-Ospek-and-Indonesia-Feudal-Mentality.md">The Useless Tradition of Ospek and Indonesia’s Feudal Mentality</a></p>
       <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/eCPPTv3-Certification-Review-Dont-Take-It.md">eCPPTv3 Certification Review | Don’t Take It?</a></p>
