--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <body>
     <h1>0xc4t Notes</h1>
     <p class="slogan">
-      <p>Web Security & Active Directory Security</p>
+      <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
       <a href="index.html">Posts</a>
