--- a/about.html
+++ b/about.html
@@ -13,10 +13,10 @@
      :root {
         --bg-color: #1e1e2e;
         --text-color: #cdd6f4;
-        --link-color: #89b4fa;
+        --link-color: #cba6f7;
         --link-hover: #f38ba8;
         --nav-color: #cba6f7;
-        --accent-color: #89b4fa;
+        --accent-color: #cba6f7;
         --border-color: #45475a;
         --footer-color: #a6adc8;
         --code-bg: #11111b;
