--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
 
     <h1>Articles</h1>
     <div class="links">
+      <p>2025-09-21 >> <a href="/content.html?p=md/rogue-rdp-via-spear-phishing-initial-access-tactic.md">Rogue RDP via Spear Phishing: Initial Access Tactic</a></p>
       <p>2025-09-08 >> <a href="/content.html?p=md/The-Useless-Tradition-of-Ospek-and-Indonesia-Feudal-Mentality.md">The Useless Tradition of Ospek and Indonesia’s Feudal Mentality</a></p>
       <p>2025-09-03 >> <a href="/content.html?p=md/ESC1-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
       <p>2025-09-04 >> <a href="/content.html?p=md/Simplifying-Pivoting-Using-Ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
