--- a/content.html
+++ b/content.html
@@ -75,12 +75,14 @@
         background-color: var(--code-bg);
         color: var(--code-color);
         font-family: "JetBrains Mono", monospace;
-        font-size: 0.9rem;
+        font-size: 0.7.5rem;
         padding: 12px;
         border-radius: 8px;
         overflow-x: auto;
         display: block;
         line-height: 1.4;
+        margin-bottom: 10px;
+        /* margin-top: 10px; */
       }
 
       code:not(pre code) {
