--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@
 
     <h1>Articles</h1>
     <div class="links">
+      <p>2025-02-11 >> <a href="/content.html?p=md/review-the-crta-new-exam.md">Review: The New CRTA Exam — Is It Easier Now?</a></p>
       <p>2025-02-11 >> <a href="/content.html?p=md/ESC4-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC4 ADCS Misconfigurations</a></p>
       <p>2025-10-22 >> <a href="/content.html?p=md/ESC3-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC3 ADCS Misconfigurations</a></p>
       <p>2025-10-19 >> <a href="/content.html?p=md/ESC2-AD-CS-Misconfigurations-exploitation—Active-Directory-Pentesting.md">AD CS Attack Paths Series: ESC2 ADCS Misconfigurations</a></p>
