--- a/content.html
+++ b/content.html
@@ -14,10 +14,10 @@
       :root {
         --bg-color: #1e1e2e;
         --text-color: #cdd6f4;
-        --link-color: #cba6f7;
+        --link-color: #b4befe;
         --link-hover: #f38ba8;
-        --nav-color: #cba6f7;
-        --accent-color: #cba6f7;
+        --nav-color: #b4befe;
+        --accent-color: #b4befe;
         --border-color: #45475a;
         --footer-color: #a6adc8;
         --code-bg: #11111b;
