--- a/index.html
+++ b/index.html
@@ -247,26 +247,23 @@
     </p>
     <nav>
       <a href="index.html">Posts</a>
-      <a href="about.html">About</a>
     </nav>
     <hr>
 
     <h1>Articles</h1>
     <div class="links">
-    <p>2025-10-27 <a href="/content.html?p=md/review-the-crta-new-exam.md">Review: The New CRTA Exam — Is It Easier Now?</a></p>
-    <p>2025-02-11 <a href="/content.html?p=md/esc4-ad-cs-misconfigurations-exploitation-active-airectory-pentesting.md">AD CS Attack Paths Series: ESC4 ADCS Misconfigurations</a></p>
-    <p>2025-10-22 <a href="/content.html?p=md/esc3-ad-cs-misconfigurations-exploitation-active-airectory-pentesting.md">AD CS Attack Paths Series: ESC3 ADCS Misconfigurations</a></p>
-    <p>2025-10-19 <a href="/content.html?p=md/esc2-ad-cs-misconfigurations-exploitation-active-airectory-pentesting.md">AD CS Attack Paths Series: ESC2 ADCS Misconfigurations</a></p>
-    <p>2025-09-03 <a href="/content.html?p=md/esc1-ad-cs-misconfigurations-exploitation-active-airectory-pentesting.md">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
-    <p>2025-09-21 <a href="/content.html?p=md/first-time-WiFi-pentest—real-world-findings.md">First-Time WiFi Pentest — Real-World Findings</a></p>
-    <p>2025-09-21 <a href="/content.html?p=md/rogue-rdp-via-spear-phishing-initial-access-tactic.md">Rogue RDP via Spear Phishing: Initial Access Tactic</a></p>
-    <p>2025-09-08 <a href="/content.html?p=md/the-useless-tradition-of-ospek-and-indonesia-feudal-mentality.md">The Useless Tradition of Ospek and Indonesia’s Feudal Mentality</a></p>
-    <p>2025-09-04 <a href="/content.html?p=md/simplifying-pivoting-using-ligolo-ng.md">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
-    <p>2025-09-04 <a href="/content.html?p=md/eCPPTv3-certification-review-Dont-take-it.md">eCPPTv3 Certification Review | Don’t Take It?</a></p>
-    <p>2025-09-04 <a href="/content.html?p=md/how-i-can-get-P1-nasa-easily-dorking.md">How I Can Get P1 Nasa easily — Dorking</a></p>
-    <p>2025-06-17 <a href="/content.html?p=md/backup-vulnerabilities-android-mobile-application.md">Backup Vulnerabilities Android Mobile Application</a></p>
-    <p>2025-03-16 <a href="/content.html?p=md/lateral-movement-double-pivoting-with-ligolo-ng.md">Lateral Movement Double Pivoting with Ligolo-ng</a></p>
-    <p>2025-03-16 <a href="/content.html?p=md/backup-vulnerabilities-android-mobile-application.md">Extract file from .DS_Store — Information Disclosure</a></p>
+    <p>2025-10-27 <a href="/post/review-the-crta-new-exam">Review: The New CRTA Exam — Is It Easier Now?</a></p>
+    <p>2025-02-11 <a href="/post/esc4-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC4 ADCS Misconfigurations</a></p>
+    <p>2025-10-22 <a href="/post/esc3-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC3 ADCS Misconfigurations</a></p>
+    <p>2025-10-19 <a href="/post/esc2-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC2 ADCS Misconfigurations</a></p>
+    <p>2025-09-03 <a href="/post/esc1-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
+    <p>2025-09-21 <a href="/post/first-time-WiFi-pentest—real-world-findings">First-Time WiFi Pentest — Real-World Findings</a></p>
+    <p>2025-09-21 <a href="/post/rogue-rdp-via-spear-phishing-initial-access-tactic">Rogue RDP via Spear Phishing: Initial Access Tactic</a></p>
+    <p>2025-09-08 <a href="/post/the-useless-tradition-of-ospek-and-indonesia-feudal-mentality">The Useless Tradition of Ospek and Indonesia’s Feudal Mentality</a></p>
+    <p>2025-09-04 <a href="/post/simplifying-pivoting-using-ligolo-ng">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
+    <p>2025-09-04 <a href="/post/eCPPTv3-certification-review-Dont-take-it">eCPPTv3 Certification Review | Don’t Take It?</a></p>
+    <p>2025-09-04 <a href="/post/how-i-can-get-P1-nasa-easily-dorking">How I Can Get P1 Nasa easily — Dorking</a></p>
+    <p>2025-06-17 <a href="/post/backup-vulnerabilities-android-mobile-application">Backup Vulnerabilities Android Mobile Application</a></p>
     </div>
 
     <hr>
