--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
     <p>2025-09-04 <a href="/post/eCPPTv3-certification-review-Dont-take-it">eCPPTv3 Certification Review | Don’t Take It?</a></p>
     <p>2025-09-04 <a href="/post/how-i-can-get-P1-nasa-easily-dorking">How I Can Get P1 Nasa easily — Dorking</a></p>
     <p>2025-06-17 <a href="/post/backup-vulnerabilities-android-mobile-application">Backup Vulnerabilities Android Mobile Application</a></p>
+    <p>2024-06-04 <a href="/post/laravel-debugbar-enable-leads-s3-aws-takeover-collab-hunting">Laravel Debugbar enable Leads s3 Aws Takeover — Collab Hunting</a></p>
     </div>
 
     <hr>
