--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 
     <h1>Articles</h1>
     <div class="links">
+    <p>2025-10-27 <a href="/post/self-proccess-injection-with-cpp">Self Proccess Injection With CPP</a></p>
     <p>2025-10-27 <a href="/post/review-the-crta-new-exam">Review: The New CRTA Exam — Is It Easier Now?</a></p>
     <p>2025-02-11 <a href="/post/esc4-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC4 ADCS Misconfigurations</a></p>
     <p>2025-10-22 <a href="/post/esc3-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC3 ADCS Misconfigurations</a></p>
@@ -264,7 +265,6 @@
     <p>2025-09-04 <a href="/post/eCPPTv3-certification-review-Dont-take-it">eCPPTv3 Certification Review | Don’t Take It?</a></p>
     <p>2025-09-04 <a href="/post/how-i-can-get-P1-nasa-easily-dorking">How I Can Get P1 Nasa easily — Dorking</a></p>
     <p>2025-06-17 <a href="/post/backup-vulnerabilities-android-mobile-application">Backup Vulnerabilities Android Mobile Application</a></p>
-    <p>2024-06-04 <a href="/post/laravel-debugbar-enable-leads-s3-aws-takeover-collab-hunting">Laravel Debugbar enable Leads s3 Aws Takeover — Collab Hunting</a></p>
     </div>
 
     <hr>
