--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 
     <h1>Articles</h1>
     <div class="links">
+    <p>2025-11-20 <a href="/post/my-journey-to-becoming-a-pentester-at-17">My Journey to Becoming a Pentester at 17</a></p>
     <p>2025-11-09 <a href="/post/self-proccess-injection-with-cpp">Self Proccess Injection With CPP</a></p>
     <p>2025-10-27 <a href="/post/review-the-crta-new-exam">Review: The New CRTA Exam — Is It Easier Now?</a></p>
     <p>2025-02-11 <a href="/post/esc4-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC4 ADCS Misconfigurations</a></p>
