--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>0xc4t Notes</title>
     <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/1960719102932344837/T8Sl7V0i_400x400.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="0xc4t">
+    <meta property="og:description" content="Web Security & Active Directory Security">
+    <meta property="og:site_name" content="0xc4t">
+    <meta property="og:image" content="https://pbs.twimg.com/profile_images/1960719102932344837/T8Sl7V0i_400x400.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap');
