--- a/index.html
+++ b/index.html
@@ -259,6 +259,7 @@
 
     <h1>Articles</h1>
     <div class="links">
+    <p>2025-11-28 <a href="/post/five-findings-i-often-see-during-web-pentesting">Five Findings I Often See During Web Pentesting</a></p>
     <p>2025-11-20 <a href="/post/my-journey-to-becoming-a-pentester-at-17">My Journey to Becoming a Pentester at 17</a></p>
     <p>2025-11-09 <a href="/post/self-proccess-injection-with-cpp">Self Proccess Injection With CPP</a></p>
     <p>2025-10-27 <a href="/post/review-the-crta-new-exam">Review: The New CRTA Exam — Is It Easier Now?</a></p>
