--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:image" content="https://pbs.twimg.com/profile_images/1960719102932344837/T8Sl7V0i_400x400.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "81ab0317a4f24dde96e3b68dd2b1e0e3"}'></script>
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap');
