--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <meta property="og:image" content="https://pbs.twimg.com/profile_images/1960719102932344837/T8Sl7V0i_400x400.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "81ab0317a4f24dde96e3b68dd2b1e0e3"}'></script>
 
     <style>
       @import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap');
@@ -260,6 +259,7 @@
 
     <h1>Articles</h1>
     <div class="links">
+    <p>2025-10-22 <a href="/post/esc5-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC5 ADCS Misconfigurations</a></p>
     <p>2025-12-02 <a href="/post/ewptxv3-certification-review">eWPTXv3 Certification Review</a></p>
     <p>2025-11-28 <a href="/post/five-findings-i-often-see-during-web-pentesting">Five Findings I Often See During Web Pentesting</a></p>
     <p>2025-11-20 <a href="/post/my-journey-to-becoming-a-pentester-at-17">My Journey to Becoming a Pentester at 17</a></p>
