--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>0xc4t Notes</title>
+    <title>./0xc4t.re</title>
     <link rel="icon" type="image/x-icon" href="https://pbs.twimg.com/profile_images/1960719102932344837/T8Sl7V0i_400x400.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <meta property="og:type" content="website">
@@ -248,12 +248,12 @@
     </style>
   </head>
   <body>
-    <h1>0xc4t Notes</h1>
+    <h1>./0xc4t.re</h1>
     <p class="slogan">
       <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
-      <a href="index.html">Posts</a>
+      <a href="/">Posts</a>
     </nav>
     <hr>
 
