--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
     <hr>
     <div class="social-icons">
       <a href="https://www.instagram.com/0xc4t" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://x.com/iamvarel" target="_blank"><i class="fab fa-x-twitter"></i></a>
+      <a href="https://x.com/0x0c4t" target="_blank"><i class="fab fa-x-twitter"></i></a>
     </div>
     <div class="footer">© 2025 0xc4t Notes</div>
   </body>
