--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <p>2025-10-22 <a href="/post/esc3-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC3 ADCS Misconfigurations</a></p>
     <p>2025-10-19 <a href="/post/esc2-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC2 ADCS Misconfigurations</a></p>
     <p>2025-09-03 <a href="/post/esc1-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC1 ADCS Misconfigurations</a></p>
-    <p>2025-09-21 <a href="/post/first-time-WiFi-pentest—real-world-findings">First-Time WiFi Pentest — Real-World Findings</a></p>
+    <p>2025-09-21 <a href="/post/first-time-WiFi-pentest-real-world-findings">First-Time WiFi Pentest — Real-World Findings</a></p>
     <p>2025-09-21 <a href="/post/rogue-rdp-via-spear-phishing-initial-access-tactic">Rogue RDP via Spear Phishing: Initial Access Tactic</a></p>
     <p>2025-09-08 <a href="/post/the-useless-tradition-of-ospek-and-indonesia-feudal-mentality">The Useless Tradition of Ospek and Indonesia’s Feudal Mentality</a></p>
     <p>2025-09-04 <a href="/post/simplifying-pivoting-using-ligolo-ng">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
