--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <h2>Articles</h2>
     <div class="links">
     <p>2025-12-04 <a href="/post/esc5-ad-cs-misconfigurations-exploitation-active-airectory-pentesting">AD CS Attack Paths Series: ESC5 ADCS Misconfigurations</a></p>
-    <p>2025-12-02 <a href="/post/ewptxv3-certification-review">eWPTXv3 Certification Review</a></p>
+    <p>2025-12-02 <a href="/post/ewptxv3-certification-review">My Honest Review of the eWPTXv3 Certification</a></p>
     <p>2025-11-28 <a href="/post/five-findings-i-often-see-during-web-pentesting">Five Findings I Often See During Web Pentesting</a></p>
     <p>2025-11-20 <a href="/post/my-journey-to-becoming-a-pentester-at-17">My Journey to Becoming a Pentester at 17</a></p>
     <p>2025-11-09 <a href="/post/self-proccess-injection-with-cpp">Self Proccess Injection With CPP</a></p>
@@ -273,7 +273,7 @@
     <p>2025-09-21 <a href="/post/rogue-rdp-via-spear-phishing-initial-access-tactic">Rogue RDP via Spear Phishing: Initial Access Tactic</a></p>
     <p>2025-09-08 <a href="/post/the-useless-tradition-of-ospek-and-indonesia-feudal-mentality">The Useless Tradition of Ospek and Indonesia’s Feudal Mentality</a></p>
     <p>2025-09-04 <a href="/post/simplifying-pivoting-using-ligolo-ng">Simplifying Pivoting Using Ligolo-ng Lateral Movement</a></p>
-    <p>2025-09-04 <a href="/post/eCPPTv3-certification-review-Dont-take-it">eCPPTv3 Certification Review | Don’t Take It?</a></p>
+    <p>2025-09-04 <a href="/post/eCPPTv3-certification-review-Dont-take-it">My Honest Review of the eCPPTv3 Certification - Don’t Take It?</a></p>
     <p>2025-09-04 <a href="/post/how-i-can-get-P1-nasa-easily-dorking">How I Can Get P1 Nasa easily — Dorking</a></p>
     <p>2025-06-17 <a href="/post/backup-vulnerabilities-android-mobile-application">Backup Vulnerabilities Android Mobile Application</a></p>
     </div>
