--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
       <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
-      <a href="/">Posts</a>
+      <a href="/">/Posts</a>
+      <a href="/about">/About</a>
     </nav>
     <hr>
 
