--- a/about/index.html
+++ b/about/index.html
@@ -261,7 +261,7 @@
       <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
-      <a href="">/Posts</a>
+      <a href="/">/Posts</a>
       <a href="/about">/About</a>
     </nav>
     <hr>
