--- a/about/index.html
+++ b/about/index.html
@@ -256,13 +256,13 @@
   </style>
 </head>
 <body>
-    <h1><a href="index.html">0xc4t Notes</a></h1>
+    <h1><a href="index.html">./0xc4t.re</a></h1>
     <p class="slogan">
       <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
-      <a href="/">/Posts</a>
-      <a href="/about">/About</a>
+      <a href="/index.html">/posts</a>
+      <a href="/about">/about</a>
     </nav>
     <hr>
   <h1>About Me</h1>
