--- a/index.html
+++ b/index.html
@@ -253,8 +253,7 @@
       <i>Web Security & Active Directory Security</i>
     </p>
     <nav>
-      <a href="/index.html">/posts</a>
-      <a href="/about">/about</a>
+      <a href="/">/posts</a>
     </nav>
     <hr>
 
